--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     </div>
                 </div>
                 <div class="icon-wrapper">
-                    <div class="icon" id="zoon-in">
+                    <div class="icon" id="zoom-in">
                         <img src="assets/button-icons/zoom-in.svg">
                     </div>
-                    <div class="icon" id="zoon-out">
+                    <div class="icon" id="zoom-out">
                         <img src="assets/button-icons/zoom-out.svg">
                     </div>
                 </div>
