icone adicionado ao html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                     </div>
                 </div>
                 <div class="icon-wrapper">
-                    <div class="icon" title="Iniciar Apresentação de Slides">
+                    <div class="icon" id="pause" style="display: none;" title="Pausar Apresentação de Slides">
+                        <img src="assets/button-icons/pause.svg">
+                    </div>
+                    <div class="icon" id="play" title="Iniciar Apresentação de Slides">
                         <img src="assets/button-icons/play.svg">
                     </div>
                     <div class="icon" title="Configurações">
