buttons added in index.html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,19 @@
                     </div>
                 </div>
                 <div class="icon-wrapper">
-                    <div class="icon" id="zoom-in">
+                    <div class="icon" id="zoom-in" title="Aumentar zoom">
                         <img src="assets/button-icons/zoom-in.svg">
                     </div>
-                    <div class="icon" id="zoom-out">
+                    <div class="icon" id="zoom-out" title="Diminuir zoom">
                         <img src="assets/button-icons/zoom-out.svg">
+                    </div>
+                </div>
+                <div class="icon-wrapper">
+                    <div class="icon" id="rotate-left" title="Girar para esquerda">
+                        <img src="assets/button-icons/rotate-left.svg">
+                    </div>
+                    <div class="icon" id="rotate-right" title="Girar para direita">
+                        <img src="assets/button-icons/rotate-right.svg">
                     </div>
                 </div>
                 <div class="icon-wrapper">
